Sourcelink for delete actions in both tables + fix CSS bug in formatting nested tables

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -36,7 +36,7 @@ a.source {
 	text-decoration: none;
 }
 
-table.tree th {
+table.tree th, table.tree-nested th {
 	background-color: black;
 }
 
@@ -49,8 +49,12 @@ td.full0 {
 	text-align: center;
 }
 
-table.tree td.full a {
+table.tree td.full a, table.tree-nested td.full a {
 	display: block;
 	width: 100%;
 	background-color: black;
+}
+
+table.tree-nested {
+	display: inline-table;
 }
